# jinja2-type-gen

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN.md  GEMINI.md  LICENSE  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  release.yml
docs/: index.md  tutorial.md
docs/development/: ARCHITECTURE.md  CONTRIBUTING.md
examples/simple/: README.md  example.py  pyproject.toml
examples/tutorial/: README.md  pyproject.toml
examples/tutorial/src/tutorial/: app.py
examples/tutorial/src/tutorial/templates/: __init__.py  foo.md.j2  index.html.j2
examples/typical/: README.md  pyproject.toml
examples/typical/src/typical_example/: __init__.py  __main__.py  core.py  templates.pyi
examples/typical/src/typical_example/templates/: base.j2  index.j2
examples/typical/tests/: test_core.py
src/jinja2_type_gen/: __init__.py  analyzer.py  cli.py  extension.py
tests/: test_analyzer.py  test_cli.py  test_concurrency.py  test_coverage_bonus.py  test_extension.py  test_unhappy_paths.py
