[project]
name = "jinja2-type-gen"
dynamic = ["version"]
description = "Strict, compile-time/static type safety for Jinja2 templates without compromising runtime performance."
readme = "README.md"
authors = [{ name = "Derek Ditch", email = "dcode@users.noreply.github.com" }]
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10"
dependencies = ["jinja2>=3.1.6"]
keywords = ["jinja2", "typing", "typeddict", "code generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://github.com/dcode/jinja2-type-gen"
Repository = "https://github.com/dcode/jinja2-type-gen"
"Issue Tracker" = "https://github.com/dcode/jinja2-type-gen/issues"

[project.scripts]
jinja2-type-gen = "jinja2_type_gen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatch>=1.16.5",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-semantic-release>=10.5.3",
    "ruff>=0.15.5",
]

docs = ["zensical"]

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov"]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.12", "3.14"]

[tool.hatch.envs.test]
scripts = { test = "pytest {args:tests}" }

[tool.uv.workspace]
members = ["examples/*"]

[tool.hatch.version]
path = "src/jinja2_type_gen/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests", "examples"]

[tool.coverage.run]
branch = true
source = ["."]                                        # Optional: specify the source root
omit = ["examples/*", "tests/*", "docs/*", ".venv/*"]

[tool.semantic_release]
version_variable = "src/jinja2_type_gen/__init__.py:__version__"
build_command = "uv build"

[tool.semantic_release.branches.main]
match = "main"
