[project]
name = "simple-example"
version = "0.1.0"
description = "A simple example using jinja2-type-gen"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jinja2-type-gen",
    "jinja2>=3.1.6"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
jinja2-type-gen = { workspace = true }
