[project]
name = "typical-example"
version = "0.1.0"
description = "A typical workspace example using jinja2-type-gen"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jinja2-type-gen",
    "jinja2>=3.1.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[project.scripts]
typical-example = "typical_example.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/typical_example"]

[tool.hatch.build.targets.wheel.force-include]
"src/typical_example/templates" = "typical_example/templates"

[tool.uv.sources]
jinja2-type-gen = { workspace = true }
